--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 gasPriceUl.style.display = "none";
             }
             await new Promise(resolve => setTimeout(resolve, 1000));
-            break
+          // break
         }
     }
 
