--- a/v2/index.html
+++ b/v2/index.html
@@ -42,10 +42,10 @@
             top: 1px;
         }
     </style>
+  <script src="../web3/web3.min.js"></script>
+    <script src="../utils/startv2.js"></script>
+    <script src="../utils/utils.js"></script>
 
-    <script src="./web3/web3.min.js"></script>
-    <script src="./utils/utils.js"></script>
-    <script src="./utils/start.js"></script>
 </head>
 
 <body>
@@ -98,8 +98,6 @@
             }
             await new Promise(resolve => setTimeout(resolve, 500));
         }
-        //web3Provider = "https://data-seed-prebsc-1-s2.binance.org:8545"
-      
         globalWeb3 = new Web3(web3Provider);
         web3 = new Web3(web3Provider);
         const gasPrice0 = await web3.eth.getGasPrice()
